res/css/views/right_panel/_ThreadPanel.scss
/*
Copyright 2021 The Matrix.org Foundation C.I.C.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.mx_ThreadPanel {
    --ThreadPanel_header-button-size: 24px;

    display: flex;
    flex-direction: column;
    height: 100px;
    overflow: visible;

    .mx_BaseCard_header {
        margin-bottom: $spacing-12;

        .mx_BaseCard_close,
        .mx_BaseCard_back {
            width: var(--ThreadPanel_header-button-size);
            height: var(--ThreadPanel_header-button-size);
        }

        .mx_BaseCard_back {
            margin-inline-start: calc(var(--BaseCard_header_button-margin) - 4px);
        }

        .mx_BaseCard_close {
            margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
        }
    }

    .mx_BaseCard_back ~ .mx_ThreadPanel__header {
        width: calc(100% - 60px);
        margin-inline-start: var(--ThreadPanel_header-button-size);

        span {
            margin-inline-start: 6px;
        }
    }

    .mx_ThreadPanel__header {
        width: calc(100% - 38px);
        height: 24px;
        display: flex;
        flex: 1;
        justify-content: space-between;
        align-items: center;

        span:first-of-type {
            font-weight: 600;
            font-size: 15px;
            line-height: 18px;
            color: $secondary-content;
        }

        .mx_AccessibleButton {
            font-size: 12px;
            color: $secondary-content;
        }

        .mx_MessageActionBar_optionsButton {
            position: relative;
        }

        .mx_MessageActionBar_maskButton {
            width: var(--ThreadPanel_header-button-size);
            height: var(--ThreadPanel_header-button-size);

            &::after {
                mask-size: var(--ThreadPanel_header-button-size);
                mask-image: url("$(res)/img/element-icons/message/overflow-large.svg");
            }
        }
    }

    .mx_AutoHideScrollbar,
    .mx_RoomView_messagePanelSpinner {
        background-color: $background;
        border-radius: 8px;
        padding-inline-end: 0;
        overflow-y: scroll; // set gap between the thread tile and the right border
        height: 100%;
    }

    // Override _GroupLayout.scss for the thread panel
    .mx_GroupLayout {
        .mx_EventTile {
            .mx_MessageActionBar {
                right: 0;
                top: -36px; // 2px above EventTile
                z-index: 10; // See _EventTile.scss
            }

            &[data-shape=ThreadsList] {
                > .mx_DisambiguatedProfile {
                    margin-inline-start: 0;
                }

                .mx_MessageTimestamp {
                    position: initial;
                    width: auto;
                }

                .mx_EventTile_line {
                    padding-bottom: 0; // Override mx_EventTile_line on _GroupLayout.scss
                }
            }
        }
    }

    &.mx_ThreadView {
        max-height: 100%;

        // Inside a thread timeline only
        .mx_GenericEventListSummary {
            &:not([data-layout=bubble]) > .mx_EventTile_line {
                padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
                padding-inline-end: var(--ThreadView_group_spacing-end); // align summary text with message text
            }
        }

        .mx_ThreadView_timelinePanelWrapper {
            position: relative;
            min-height: 0; // don't displace the composer
            flex-grow: 1;

            .mx_FileDropTarget {
                border-radius: 8px;
            }
        }

        .mx_MessageComposer_sendMessage {
            margin-right: 0;
        }
    }

    .mx_RoomView_messagePanel { // To avoid the rule from being applied to .mx_ThreadPanel_empty
        .mx_RoomView_messageListWrapper {
            width: calc(100% + 6px); // 8px - 2px
        }
    }

    .mx_RoomView_MessageList {
        padding-inline-start: $spacing-8;
        padding-inline-end: $spacing-8;
        content-visibility: visible;
    }

    .mx_EventTile,
    .mx_GenericEventListSummary {
        // Account for scrollbar when hovering
        padding-top: 0;

        .mx_DateSeparator {
            display: none;
        }

        &.mx_EventTile_clamp:hover {
            cursor: pointer;
        }
    }

    .mx_MessageComposer {
        background-color: $background;
        border-radius: 8px;
        margin-top: 8px;
        padding: 0 8px;
        box-sizing: border-box;
    }

    .mx_ThreadPanel_dropdown {
        padding: 3px 4px 3px 8px;
        border-radius: 4px;
        line-height: 1.5;
        user-select: none;
    }

    .mx_ThreadPanel_dropdown:hover,
    .mx_ThreadPanel_dropdown[aria-expanded=true] {
        background: $quinary-content;
    }

    .mx_ThreadPanel_dropdown::before {
        content: "";
        width: 18px;
        height: 18px;
        background: currentColor;
        mask-image: url("$(res)/img/feather-customised/chevron-down.svg");
        mask-size: 100%;
        mask-repeat: no-repeat;
        float: right;
    }

    .mx_MessageTimestamp {
        font-size: $font-12px;
        color: $secondary-content;
    }

    &.mx_ThreadView .mx_EventTile {
        // handling for hidden events (e.g reactions) in the thread view

        &:not([data-layout=bubble]) {
            &:hover.mx_EventTile_verified.mx_EventTile_info .mx_EventTile_line,
            &:hover.mx_EventTile_unverified.mx_EventTile_info .mx_EventTile_line,
            &:hover.mx_EventTile_unknown.mx_EventTile_info .mx_EventTile_line {
                padding-inline-start: 0; // Override
            }
        }

        &.mx_EventTile_info {
            padding-top: 0;

            &.mx_EventTile_selected .mx_EventTile_line,
            .mx_EventTile_line {
                $line-height: $font-12px;

                padding-inline-start: 0;
                line-height: $line-height;

                .mx_EventTile_content,
                .mx_RedactedBody {
                    width: auto;
                    margin-inline-start: calc(var(--ThreadView_group_spacing-start) + 14px + 6px); // 14px: avatar width, 6px: 20px - 14px
                    font-size: $line-height;
                }
            }

            &:not([data-layout=bubble]) {
                .mx_MessageTimestamp {
                    top: 2px; // Align with avatar
                }

                .mx_EventTile_avatar {
                    left: calc($MessageTimestamp_width + 14px - 4px); // 14px: avatar width, 4px: align with text
                    z-index: 9; // position above the hover styling
                }
            }

            &[data-layout=bubble] {
                .mx_EventTile_avatar {
                    inset-inline-start: 0;
                }
            }

            .mx_EventTile_avatar {
                position: absolute;
                top: 1.5px; // Align with hidden event content
                margin-top: 0;
                margin-bottom: 0;
                width: 14px; // avatar img size
                height: 14px; // avatar img size
            }

            .mx_ViewSourceEvent_toggle {
                display: none; // hide the hidden event expand button, not enough space, view source can still be used
            }
        }
    }

    .mx_BaseCard_footer {
        text-align: left;
        font-size: $font-12px;
        align-items: center;
        justify-content: flex-end;
        gap: 4px;
        position: relative;
        top: 2px;
        padding-right: 8px;

        .mx_AccessibleButton_kind_link_inline {
            color: $secondary-content;
        }
    }
}

.mx_ThreadPanel_replies {
    margin-top: $spacing-8;
    display: flex;
    align-items: center;
    position: relative;

    .mx_ThreadPanel_ThreadsAmount {
        @mixin ThreadsAmount;
        font-size: $font-12px; // Same font size as the counter on the main panel
    }
}

.mx_ThreadPanel_viewInRoom::before {
    mask-image: url('$(res)/img/element-icons/view-in-room.svg');
}

.mx_ThreadPanel_copyLinkToThread::before {
    mask-image: url('$(res)/img/element-icons/link.svg');
}

.mx_ThreadPanel_empty {
    border-radius: 8px;
    background: $background;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    padding: 20px;
    box-sizing: border-box; // Include padding and border
    width: 100%;

    h2 {
        color: $primary-content;
        font-weight: $font-semi-bold;
        font-size: $font-18px;
        margin-top: 24px;
        margin-bottom: 10px;
    }

    p {
        font-size: $font-15px;
        color: $secondary-content;
        margin: 10px 0;
    }

    button {
        border: none;
        background: none;
        color: $accent;
        font-size: $font-15px;

        &:hover,
        &:active {
            text-decoration: underline;
            cursor: pointer;
        }
    }

    .mx_ThreadPanel_empty_tip {
        font-size: $font-12px;
        line-height: $font-15px;

        >b {
            font-weight: $font-semi-bold;
        }
    }
}

.mx_ThreadPanel_largeIcon {
    width: 28px;
    height: 28px;
    padding: 18px;
    background: $system;
    border-radius: 50%;

    &::after {
        content: "";
        width: inherit;
        height: inherit;
        mask-image: url('$(res)/img/element-icons/thread-summary.svg');
        mask-position: center;
        display: inline-block;
        mask-repeat: no-repeat;
        mask-size: contain;
        background-color: $secondary-content;
    }
}

.mx_ContextualMenu_wrapper.mx_ThreadPanel__header {
    .mx_ContextualMenu {
        position: initial;

        span:first-of-type {
            font-weight: $font-semi-bold;
            font-size: inherit;
            color: $primary-content;
        }

        font-size: $font-12px;
        color: $secondary-content;
        padding-top: 10px;
        padding-bottom: 10px;

        border: 1px solid $quinary-content;
        box-shadow: 0px 1px 3px rgba(23, 25, 28, 0.05);
    }

    .mx_ContextualMenu_chevron_top {
        left: auto;
        right: 22px;
        border-bottom-color: $quinary-content;

        &::after {
            content: "";
            border: inherit;
            border-bottom-color: $menu-bg-color;
            position: absolute;
            top: 1px;
            left: -8px;
        }
    }

    .mx_ThreadPanel_Header_FilterOptionItem {
        display: flex;
        flex-grow: 1;
        justify-content: space-between;
        flex-direction: column;
        padding: 10px 20px 10px 30px;
        position: relative;

        &:hover {
            background-color: $event-selected-color;
        }

        &[aria-checked="true"] {
            :first-child {
                margin-left: -20px;
            }

            :first-child::before {
                content: "";
                width: 12px;
                height: 12px;
                margin-right: 8px;
                mask-image: url("$(res)/img/feather-customised/check.svg");
                mask-size: 100%;
                mask-repeat: no-repeat;
                background-color: $primary-content;
                display: inline-block;
                vertical-align: middle;
            }
        }

        :last-child {
            color: $secondary-content;
        }
    }
}

